# winter-flow-ai-hospital-surge-digital-twin

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: demo_script.md
tests/: __init__.py  test_forecasting.py  test_hospitals.py  test_imports.py  test_optimizer.py  test_policy.py  test_report.py  test_scenarios.py  test_simulation.py  test_synthetic_history.py
winterflow/: __init__.py  config.py  constants.py
winterflow/data/: hospitals.py  scenarios.py  synthetic_history.py
winterflow/forecasting/: __init__.py  evaluation.py  features.py  models.py
winterflow/optimization/: __init__.py  actions.py  objective.py  optimizer.py  policy.py
winterflow/reporting/: report.py
winterflow/simulation/: __init__.py  engine.py  entities.py  metrics.py  validation.py
winterflow/ui/: components.py  plots.py  text.py  theme.py
