[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winter-flow"
version = "0.1.0"
description = "WINTER-Flow: AI Hospital Surge Digital Twin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.58",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "simpy>=4.1",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
optional = ["scipy>=1.11", "ortools>=9.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["winterflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
